@@ -1,40 +1,98 @@
 package com.facetrack.config;
 
+import java.util.List;
+
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
-
 @Configuration
 public class CorsConfig {
 
-	@Bean
-	CorsWebFilter corsWebFilter() {
-		CorsConfiguration corsConfig = new CorsConfiguration();
+    @Bean
+    public CorsWebFilter corsWebFilter() {
 
-		// 1. Allow frontend
-		corsConfig.setAllowedOrigins(Arrays.asList("http://localhost:5173", "https://smart-attend-ai.netlify.app"));
+        CorsConfiguration config = new CorsConfiguration();
 
-		// 2. Allow all standard HTTP methods, including OPTIONS (Crucial for CORS
-		// pre-flight)
-		corsConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedOriginPatterns(List.of(
+                "http://localhost:5173",
+                "http://192.168.1.111:5173",
+                "http://172.29.128.1:5173",
+                "https://smart-attend-ai.netlify.app"
+        ));
 
-		// 3. Allow all headers (like Authorization for your JWT token)
-		corsConfig.setAllowedHeaders(Arrays.asList("*"));
+        config.setAllowedMethods(List.of(
+                HttpMethod.GET.name(),
+                HttpMethod.POST.name(),
+                HttpMethod.PUT.name(),
+                HttpMethod.DELETE.name(),
+                HttpMethod.PATCH.name(),
+                HttpMethod.OPTIONS.name()
+        ));
 
-		// 4. Cache the CORS response so the browser doesn't ask every single time
-		corsConfig.setMaxAge(3600L);
+        config.setAllowedHeaders(List.of("*"));
 
-		// 5. Accepts Cookies [ withCredentials: true ]
-		corsConfig.setAllowCredentials(true);
+        config.setExposedHeaders(List.of(
+                HttpHeaders.AUTHORIZATION,
+                HttpHeaders.SET_COOKIE
+        ));
 
-		// Apply this configuration to ALL routes (/**)
-		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-		source.registerCorsConfiguration("/**", corsConfig);
+        config.setAllowCredentials(true);
 
-		return new CorsWebFilter(source);
-	}
+        config.setMaxAge(3600L);
+
+        UrlBasedCorsConfigurationSource source =
+                new UrlBasedCorsConfigurationSource();
+
+        source.registerCorsConfiguration("/**", config);
+
+        return new CorsWebFilter(source);
+    }
 }
+
+
+//package com.facetrack.config;
+//
+//import org.springframework.context.annotation.Bean;
+//import org.springframework.context.annotation.Configuration;
+//import org.springframework.web.cors.CorsConfiguration;
+//import org.springframework.web.cors.reactive.CorsWebFilter;
+//import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
+//
+//import java.util.Arrays;
+//
+//@Configuration
+//public class CorsConfig {
+//
+//	@Bean
+//	CorsWebFilter corsWebFilter() {
+//		CorsConfiguration corsConfig = new CorsConfiguration();
+//
+//		// 1. Allow frontend
+//		corsConfig.setAllowedOrigins(Arrays.asList("http://localhost:5173", "https://smart-attend-ai.netlify.app",
+//				"http://192.168.1.111:5173", "http://172.29.128.1:5173"));
+//
+//		// 2. Allow all standard HTTP methods, including OPTIONS (Crucial for CORS
+//		// pre-flight)
+//		corsConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+//
+//		// 3. Allow all headers (like Authorization for your JWT token)
+//		corsConfig.setAllowedHeaders(Arrays.asList("*"));
+//
+//		// 4. Cache the CORS response so the browser doesn't ask every single time
+//		corsConfig.setMaxAge(3600L);
+//
+//		// 5. Accepts Cookies [ withCredentials: true ]
+//		corsConfig.setAllowCredentials(true);
+//
+//		// Apply this configuration to ALL routes (/**)
+//		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//		source.registerCorsConfiguration("/**", corsConfig);
+//
+//		return new CorsWebFilter(source);
+//	}
+//}
